HW3 is completed

--- a/hw03_frequency_analysis/Makefile
+++ b/hw03_frequency_analysis/Makefile
@@ -3,4 +3,7 @@ run:
 	go run .
 
 test:
-	go test -gcflags=-l ./...
+	go test -v -count=1 -race -gcflags=-l -timeout=30s .
+
+lint:
+	golangci-lint run .
